# temperatur_server

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py
.github/workflows/: changelog.yml  docs.yml  pre-commit-autoupdate.yml  pre-commit.yml  release.yml  unittests.yml
docs/: index.md
docs/source/: database.md  simulator.md  temperatur_server.md
search/: search_index.json
source/database/: index.html
source/input/: index.html
source/models/: index.html
source/simulator/: index.html
source/temperatur_server/: index.html
src/database/: __init__.py  database.py
src/input/: __init__.py  measurement_parser.py
src/model/: fourier_series_model.py  meat_estimator.py  meat_model.py  oven_estimator.py  oven_model.py  predictor.py
src/models/: __init__.py  fourier_series_model.py  meat_estimator.py  meat_model.py  oven_estimator.py  oven_model.py  predictor.py
src/simulator/: __init__.py  main.py  meat_model.py  oven_model.py
src/temperatur_server/: __init__.py  database.py  main.py  measurement_parser.py  server_state.py
src/temperatur_server/api/: __init__.py  api_manager.py  js_api.py  protobuf_api.py
src/temperatur_server/model/: fourier_series_model.py  meat_estimator.py  meat_model.py  oven_estimator.py  oven_model.py  predictor.py
src/temperatur_server/static/css/: style.css
src/temperatur_server/static/js/: main.js  temp_gauge.js  temp_plot.js
src/temperatur_server/templates/: index.html
tests/: import_test.py
