[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    "setuptools",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel",
    ]

[tool.isort]
profile = "black"
src_paths = ["src", "tests", "examples"]
line_length = 88

[tool.mypy]
ignore_missing_imports = true
files = "src,examples,tests"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
