[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    ]

[tool.setuptools_scm]

[tool.isort]
profile = "black"
src_paths = ["src", "tests", "examples"]
line_length = 88

[tool.mypy]
ignore_missing_imports = true
files = "src,examples,tests"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
