[metadata]
name = temperature_server
description = Server Application for Oventemperature Measurements
author = Peter Hofmeier
author_email = phofmeier@googlemail.com

[options]
package_dir =
    =src
packages = find:
install_requires =
    numpy >= 1.22.1
    casadi >= 3.5.5
    requests >= 2.22.0
    pandas >= 1.3.1
    eventlet >= 0.33.1
    Flask >= 2.0.1
    Flask-SocketIO >= 5.1.1


[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    temperatur_server = temperatur_server.main:main
    oven_simulator = simulator.main:main

[options.extras_require]
dev = flake8>=4.0.1; pytest>=6.2.5; mypy>=0.931; black>=21.12b0; codespell>=2.1.0; pre-commit>=2.17.0; mkdocs>=1.2.3; mkdocstrings[python-legacy]>=0.18.0; mkdocs-material>=8.1.9; mkdocs-bibtex>=2.0.1

[flake8]
doctests = True
exit_zero = False
max-line-length = 88
pretty = True
show_error_codes = True
statistics = True
exclude =
    .git,
    __pycache__,
    .eggs,
    .mypy_cache,
    output,
    venv,
    build
extend-ignore = I100,I201,E203

[codespell]
skip = ./venv/*,./output/*,./.*,src/temperatur_server/templates/*,
quiet-level = 3
